--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
   </div>
 
   <div id="controls">
-    <span><span>C</span>insert coin</span>
+    <span><span>C</span>Press Any Key To Start</span>
     <span><span>M</span>mute</span>
     <span><span>&lt;</span><span>&gt;</span>move</span>
     <span><span>&lt;</span><span>&gt;</span>accelerate</span>
